retrieveUnpackaged/objects/ORD_Award__c.object
<CustomObject>
    <fields>
        <fullName>Award_Amount__c</fullName>
        <label>Award Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Award_Type__c</fullName>
        <label>Award Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ORD Award</fullName>
                </value>
                <value>
                    <fullName>EPA Award</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nominator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nominator</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.HR_Org__c</field>
                <operation>startsWith</operation>
                <value>HDB</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>ORD_Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ORD_Awards1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ORD Award</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Award_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ORD Award Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ORD Awards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>